--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+ProjectSettings/ProjectSettings.asset
+ProjectSettings/ProjectSettings.asset
